# Spectralz

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: code-reviewer.md  security-analyst.md  test-generator.md
.github/workflows/: build.yml  quick-check.yml
src/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  test_main.cpp
